donation and profile

--- a/public/Frontend/css/style.css
+++ b/public/Frontend/css/style.css
@@ -290,7 +290,7 @@ a:focus {
         width: 100%;
         top: 45px;
         padding: 20px 60px;
-        background: transparent !important;
+        background: black !important;
         border-bottom: 1px solid rgba(255, 255, 255, .3);
         z-index: 9;
     }
